--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: 'AndroidInsomnia';
+    src: url('../fonts/AndroidInsomniaRegular.eot');
+    src: local('☺'), url('../fonts/AndroidInsomniaRegular.woff') format('woff'), url('../fonts/AndroidInsomniaRegular.ttf') format('truetype'), url('../fonts/AndroidInsomniaRegular.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'digitalis';
+	src: url('../fonts/digitalis.eot');
+	src: local('☺'), url('../fonts/digitalis.woff') format('woff'), url('../fonts/digitalis.ttf') format('truetype'), url('../fonts/digitalis.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'neuropolxfree';
+	src: url('../fonts/neuropolxfree.eot');
+	src: local('☺'), url('../fonts/neuropolxfree.woff') format('woff'), url('../fonts/neuropolxfree.ttf') format('truetype'), url('../fonts/neuropolxfree.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 /*----------------background-----------------*/
 .fullscreen-bg {
     overflow: hidden;
@@ -22,7 +43,7 @@
     left: 0;
     bottom: 0;
     width: 430px;
-    height: 500px;
+    height: 400px;
     margin: auto;
     background-size: cover;
     border-radius: 4px;
@@ -31,35 +52,28 @@
   padding-top: 15%;
 }
 .form_auth_block_head_text{
+    font-family: "AndroidInsomnia";
     display: block;
     text-align: center;
     padding: 10px;
-    font-size: 20px;
-    font-weight: 600;
-    background: #ffffff;
+    font-size: 25px;
+    font-weight: 400;
     opacity: 0.7;
-}
-.form_auth_block label{
-    display: block;
-    text-align: center;
-    padding: 10px;
-    background: #ffffff;
-    opacity: 0.7;
-    font-weight: 600;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    color: rgb(255, 255, 255);
 }
 .form_auth_block input{
-  display: block;
-  margin: 0 auto;
-  width: 80%;
-  height: 45px;
-  border-radius: 10px;
-  border:none;
-  outline: none;
+    font-family: "neuropolxfree";
+    font-size: 15px;
+    color: rgb(190, 33, 236);
+    display: block;
+    margin: 20px auto;
+    width: 80%;
+    height: 45px;
+    border-radius: 10px;
+    border:none;
+    outline: none;
 }
 input:focus {
-  color: #000000;
   border-radius: 10px;
   border: 2px solid #436fea;
 }
@@ -70,10 +84,14 @@ input:focus {
     margin-top: 10px;
     border-radius: 10px;
     height: 35px;
+    font-family: "AndroidInsomnia";
+    font-size: 20px;
+    color: white;
+    background-color: rgb(190, 33, 236);
     border: none;
     cursor: pointer;
 }
-::-webkit-input-placeholder {color:#3f3f44; padding-left: 10px;} // Это стили для placeholder
-::-moz-placeholder          {color:#3f3f44; padding-left: 10px;} // Это стили для placeholder
-:-moz-placeholder           {color:#3f3f44; padding-left: 10px;} // Это стили для placeholder
-:-ms-input-placeholder      {color:#3f3f44; padding-left: 10px;} // Это стили для placeholder
+::-webkit-input-placeholder {color:#3f3f44; padding-left: 10px;}
+::-moz-placeholder          {color:#3f3f44; padding-left: 10px;}
+:-moz-placeholder           {color:#3f3f44; padding-left: 10px;}
+:-ms-input-placeholder      {color:#3f3f44; padding-left: 10px;}
