--- a/Frontend/css/content.css
+++ b/Frontend/css/content.css
@@ -1,3 +1,17 @@
+@font-face {
+	font-family: 'neuropolxfree';
+	src: url('../fonts/neuropolxfree.eot');
+	src: local('☺'), url('../fonts/neuropolxfree.woff') format('woff'), url('../fonts/neuropolxfree.ttf') format('truetype'), url('../fonts/neuropolxfree.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+    font-family: 'AndroidInsomnia';
+    src: url('../fonts/AndroidInsomniaRegular.eot');
+    src: local('☺'), url('../fonts/AndroidInsomniaRegular.woff') format('woff'), url('../fonts/AndroidInsomniaRegular.ttf') format('truetype'), url('../fonts/AndroidInsomniaRegular.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 /*----------------background-----------------*/
 .fullscreen-bg {
     overflow: hidden;
@@ -17,26 +31,36 @@
 /*----------------background-----------------*/
 .form-container {
     position: absolute;
-    top: 110px;
-    right: 0;
+    top: 50px;
+    right: 750px;
     left: 0;
     bottom: 0;
     margin: auto;
     border: 2px solid #436fea;
-    width: 500px;
+    width: 600px;
     height: 500px;
+    font-family: 'neuropolxfree';
+    color: white;
+    font-size: 15px;
 }
 pre {
-  line-height: 1.5;
-  letter-spacing: 0.05rem;
-  padding: 1rem;
-  background-color: white;
+    font-family: 'AndroidInsomnia';
+    color: white;
+    margin-top: 20px;
+    line-height: 1.5;
+    letter-spacing: 0.05rem;
+    padding: 1rem;
+    background-color: #012F80;
 }
 label {
-  width: 200px;
-  margin-right: 33px;
+    width: 200px;
+    margin-right: 33px;
 }
 select {
-  width: 350px;
-  padding: 5px;
+    width: 350px;
+    padding: 5px;
+    margin-bottom: 30px;
+    font-family: 'AndroidInsomnia';
+    background-color: #022365;
+    color:white;
 }
