--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -59,7 +59,7 @@
     font-size: 25px;
     font-weight: 400;
     opacity: 0.7;
-    color: rgb(255, 255, 255);
+    color: white;
 }
 .form_auth_block input{
     font-family: "neuropolxfree";
@@ -82,6 +82,7 @@ input:focus {
     width: 80%;
     margin: 0 auto;
     margin-top: 10px;
+    margin-bottom: 20px;
     border-radius: 10px;
     height: 35px;
     font-family: "AndroidInsomnia";
@@ -90,6 +91,21 @@ input:focus {
     background-color: rgb(190, 33, 236);
     border: none;
     cursor: pointer;
+}
+.create_account {
+    font-family: "AndroidInsomnia";
+    font-size: 20px;
+    color: white;
+    margin-left: 110px;
+}
+.login {
+    font-family: "AndroidInsomnia";
+    font-size: 20px;
+    color: white;
+    margin-left: 50px;
+}
+A {
+    color:white;
 }
 ::-webkit-input-placeholder {color:#3f3f44; padding-left: 10px;}
 ::-moz-placeholder          {color:#3f3f44; padding-left: 10px;}
